@@ -1,5 +1,16 @@
 2007-09-25  Zeeshan Ali  <zeenix@gstreamer.net>
 
+	* Makefile.am:
+
+	Recurse into newly added 'data' subdirectory.
+
+	* data/pixmaps/Makefile.am:
+	* data/xml/Makefile.am:
+
+	Declare 'Makefile.in' as 'MAINTAINERCLEANFILES'.
+
+2007-09-25  Zeeshan Ali  <zeenix@gstreamer.net>
+
 	* src/common/Makefile.am:
 	* src/network-light/Makefile.am:
 	* src/universal-cp/Makefile.am:
